<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ButtonColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Yellow"
            android:text="@string/Form">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">

        <EditText
            android:id="@+id/Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:layout_margin="1mm">
        </EditText>

        <EditText
            android:id="@+id/Apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LastName"
            android:layout_margin="1mm">
        </EditText>

        <EditText
            android:id="@+id/Edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Age"
            android:inputType="number"
            android:layout_margin="1mm">
        </EditText>

        <EditText
            android:id="@+id/Correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:layout_margin="1mm">
        </EditText>

        <EditText
            android:id="@+id/Direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Address"
            android:layout_margin="1mm">
        </EditText>

        <EditText
            android:id="@+id/Telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Phone"
            android:inputType="phone"
            android:layout_margin="1mm">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/Enviar"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            app:icon="@drawable/ic_send"
            app:iconGravity="textEnd"
            android:backgroundTint="@color/Green"
            android:text="@string/Send">

        </Button>

        <Button
            android:id="@+id/Eliminar"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            app:icon="@drawable/ic_delete"
            app:iconGravity="textEnd"
            android:backgroundTint="@color/Red"
            android:text="@string/Delete">
        </Button>

    </LinearLayout>























</LinearLayout>