<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/DatosRecibidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Blue"
            android:text="@string/Form2">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/F_Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:layout_margin="1mm">
        </TextView>

        <TextView
            android:id="@+id/F_Apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LastName"
            android:layout_margin="1mm">
        </TextView>

        <TextView
            android:id="@+id/F_Edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Age"
            android:inputType="number"
            android:layout_margin="1mm">
        </TextView>

        <TextView
            android:id="@+id/F_Correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:layout_margin="1mm">
        </TextView>

        <TextView
            android:id="@+id/F_Direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Address"
            android:layout_margin="1mm">
        </TextView>

        <TextView
            android:id="@+id/F_Telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Phone"
            android:inputType="phone"
            android:layout_margin="1mm">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/finalizado"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            app:icon="@drawable/ic_check"
            app:iconGravity="textEnd"
            android:backgroundTint="@color/Green"
            android:text="@string/End">
        </Button>

    </LinearLayout>
</LinearLayout>